@@ -21,9 +21,7 @@ remove = base
 remove = Getopt::Std
 remove = File::Basename
 remove = File::Temp
-
-;[Prereqs]
-;Foo::Bar = 0
+remove = Shell::Guess
 
 [Author::Plicease::Upload]
 cpan = 1
@@ -35,4 +33,9 @@ original = Per Einar Ellefsen <pereinar@cpan.org>
 
 [SetScriptShebang]
 [CommentOut]
+
+[DynamicPrereqs]
+-condition = $^O eq 'MSWin32'
+-body      = requires('Shell::Guess');
+-body      = requires('File::Which', '1.23');
 
