@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - On Windows use Shell::Guess to determine if the current
+    directory ('.') should be included implicitly
 
 1.15      2017-09-12 22:20:43 -0400
   - Add -s option
